[package]
name = "spaced"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
clap = "~3"
clap_complete = "~3"

[dependencies]
tui = { version = "0.17", default-features = false, features = ["termion"] }
termion = "1.5"
clap = "~3"
walkdir = "2"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
rusqlite = "0.27"
chrono = "0.4"
zip = "0.6"
try_map = "0.3"
