[package]
name = "spaced"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["import"]
import = ["serde_json", "rusqlite", "zip", "try_map"]

[build-dependencies]
clap = "~3"
clap_complete = "~3"

[dependencies]
crossterm = "0.23"
clap = "~3"
walkdir = "2"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = { version = "1.0", optional = true }
rusqlite = { version = "0.27", optional = true }
zip = { version = "0.6", optional = true }
try_map = { version = "0.3", optional = true }
